grammar.js
    structure: ($) =>
      list($._semicolon, choice($._structure_item, $.package_statement)),

    _structure_item: ($) =>
      choice(
        $.package_declaration,
        $.import_declaration,
        $.using_declaration,
        $.type_definition,
        $.error_type_definition,
        $.struct_definition,
        $.tuple_struct_definition,
        $.enum_definition,
        $.value_definition,
        $.const_definition,
        $.function_definition,
        $.test_definition,
        $.trait_definition,
        $.impl_definition,
        $.impl_declaration,
        $.type_alias_definition,
        $.trait_alias_definition,
        $.function_alias_definition
      ),

    type_alias_target: ($) =>
      choice($.identifier, seq($.identifier, "as", $.identifier)),

    type_alias_targets: ($) =>
      choice(
        seq($._type, "as", $.identifier, optional($.type_parameters)),
        seq($._type, "=", $._type),
        seq($.package_identifier, $.dot_identifier),
        seq($.dot_identifier),
        seq($.package_identifier, ".(", list(",", $.type_alias_target), ")")
      ),

    type_alias_definition: ($) =>
      seq(
        optional($.attributes),
        optional($.visibility),
        "typealias",
        $.type_alias_targets
      ),

    function_definition: ($) => {
      const signature = seq(
        optional($.attributes),
        optional($.visibility),
        optional($.external_linkage),
        optional("async"),
        "fn",
        optional($.type_parameters),
        $.function_identifier,
        optional("!"),
        optional(alias($._signature_parameters, $.parameters))
      );

      return choice(
        // With body (normal .mbt files)
        seq(
          signature,
          optional(choice(seq("->", $.return_type), $.error_annotation)),
          optional($.where_clause),
          $.block_expression
        ),
        seq(
          signature,
          optional(choice(seq("->", $.return_type), $.error_annotation)),
          "=",
          $.external_source
        ),
        // Without body (.mbti files) - requires return type to disambiguate from ASI
        seq(signature, choice(seq("->", $.return_type), $.error_annotation))
      );
    },

    _signature_parameters: ($) =>
      seq("(", list(",", $._signature_parameter), ")"),

    trait_alias_target: ($) =>
      choice($.identifier, seq($.identifier, "as", $.identifier)),

    trait_alias_targets: ($) =>
      choice(
        seq($._type, "as", $.identifier, optional($.type_parameters)),
        seq($._type, "=", $._type),
        seq($.package_identifier, $.dot_identifier),
        seq($.dot_identifier),
        seq($.package_identifier, ".(", list(",", $.trait_alias_target), ")")
      ),

    trait_alias_definition: ($) =>
      seq(
        optional($.attributes),
        optional($.visibility),
        "traitalias",
        $.trait_alias_targets
      ),

    _expression: ($) => choice($._complex_expression, $._simple_expression),

    _simple_expression: ($) =>
      choice(
        $.atomic_expression,
        $.qualified_identifier,
        $.unary_expression,
        $.struct_expression,
        alias($.nonempty_block_expression, $.block_expression),
        $.anonymous_lambda_expression,
        $.anonymous_matrix_lambda_expression,
        $.constructor_expression,
        $.apply_expression,
        $.array_access_expression,
        $.dot_apply_expression,
        $.dot_dot_apply_expression,
        $.access_expression,
        $.method_expression,
        $.unit_expression,
        $.tuple_expression,
        $.parenthesized_expression,
        $.constraint_expression,
        $.array_expression,
        $.map_expression,
        $.as_expression,
        $.is_expression,
        $.range_expression,
        $.append_expression,
        $.binary_expression,
        $.lexmatch_test_expression,
        $.regex_match_expression,
        "_"
      ),

    atomic_expression: ($) => choice($.string_interpolation, $.literal),

    literal: ($) =>
      choice(
        $.boolean_literal,
        $.double_literal,
        $.float_literal,
        $.integer_literal,
        $.byte_literal,
        $.byte_escape_literal,
        $.char_literal,
        $.string_literal,
        $.bytes_literal,
        $.regex_literal,
        $.multiline_string_literal
      ),

    integer_literal: (_) =>
      token(
        choice(
          /[0-9][0-9_]*(UL|U|L|N)?/,
          /0[xX][0-9a-fA-F_]+(UL|U|L|N)?/,
          /0[oO][0-7_]+(UL|U|L|N)?/,
          /0[bB][01_]+(UL|U|L|N)?/
        )
      ),

    // integerPart = /[0-9][_0-9]*/,
    // decimalPart = /[_0-9]+/,
    // exponentPart = /[eE][0-9][_0-9]*/,
    // float_literal: _ => /[0-9][_0-9]*\.[_0-9]*([eE][0-9][_0-9]*)?/,

    block_expression: ($) =>
      seq("{", list($._semicolon, $._statement_expression), "}"),

    nonempty_block_expression: ($) =>
      seq("{", list1($._semicolon, $._statement_expression), "}"),

    matrix_case_clause: ($) =>
      seq(
        list1(",", $._pattern),
        optional($.pattern_guard),
        "=>",
        $._statement_expression
      ),

    constructor_expression: ($) =>
      choice(
        $._uppercase_identifier,
        seq($.package_identifier, $.dot_uppercase_identifier),
        seq($.type_name, "::", $._uppercase_identifier)
      ),

    argument: ($) =>
      choice(
        $._expression,
        $.labelled_argument,
        $.forwarded_labelled_argument,
        $.optional_argument,
        $.forwarded_optional_argument
      ),

    arguments: ($) => seq("(", list(",", $.argument), ")"),

    apply_expression: ($) =>
      prec.right(
        seq($._simple_expression, optional($.apply_operator), $.arguments)
      ),

    continue_expression: ($) =>
      seq("continue", optional($.label), strictList(",", $._expression)),

    _statement_expression: ($) =>
      choice(
        $.struct_definition,
        $.enum_definition,
        $.type_definition,
        $.let_expression,
        $.letrec_expression,
        $.and_expression,
        $.let_mut_expression,
        $.guard_expression,
        $.guard_let_expression,
        $.assign_expression,
        $.named_lambda_expression,
        $.named_matrix_expression,
        $.break_expression,
        $.continue_expression,
        $.return_expression,
        $.raise_expression,
        $.defer_expression,
        $.proof_assert_expression,
        $.proof_let_expression,
        $._expression,
        $.unfinished
      ),

    let_expression: ($) =>
      seq("let", $._pattern, optional($.type_annotation), "=", $._expression),

    loop_expression: ($) =>
      seq(
        optional($.loop_label),
        "loop",
        strictList1(",", $._expression),
        "{",
        list($._semicolon, $.matrix_case_clause),
        "}"
      ),

    _pattern: ($) =>
      choice($._simple_pattern, $.range_pattern, $.as_pattern, $.or_pattern),

    _type: ($) => choice($._simple_type, $.function_type),

    _simple_type: ($) =>
      choice(
        $.qualified_type_identifier,
        $.apply_type,
        $.tuple_type,
        $.trait_object_type,
        $.parenthesized_type,
        $.option_type,
        "_"
      ),

    apply_type: ($) => seq($.qualified_type_identifier, $.type_arguments),

    type_arguments: ($) => seq("[", list1(",", $._type), "]"),

    type_parameters: ($) => seq("[", list1(",", $.type_identifier), "]"),

    return_type: ($) =>
      choice(
        $._type,
        seq($._simple_type, "!"),
        seq($._simple_type, "!", $._type),
        seq($._simple_type, "?", $._type),
        seq($._simple_type, $.error_annotation)
      ),

    parameters: ($) => seq("(", list(",", $.parameter), ")"),

    uppercase_identifier: (_) => /[\p{Uppercase_Letter}][_\p{XID_Continue}]*/v,

    _uppercase_identifier: ($) => $.uppercase_identifier,

    lowercase_identifier: (_) =>
      /[_[\p{XID_Start}--\p{Uppercase_Letter}]][_\p{XID_Continue}]*/v,

    _lowercase_identifier: ($) => $.lowercase_identifier,

    identifier: ($) => choice($._uppercase_identifier, $._lowercase_identifier),

    _semicolon: ($) => choice($._automatic_semicolon, ";"),

    dot_identifier: ($) =>
      choice($.dot_lowercase_identifier, $.dot_uppercase_identifier),

    dot_uppercase_identifier: (_) =>
      /\.[\p{Uppercase_Letter}][_\p{XID_Continue}]*/v,

    package_identifier: (_) => /@[_\p{XID_Start}\/][_\p{XID_Continue}\/]*/v,

    qualified_identifier: ($) =>
      choice(
        $._lowercase_identifier,
        seq($.package_identifier, $.dot_lowercase_identifier)
      ),

    qualified_type_identifier: ($) =>
      choice($.identifier, seq($.package_identifier, $.dot_identifier)),

    function_identifier: ($) =>
      choice(
        $._lowercase_identifier,
        seq($.type_name, "::", $._lowercase_identifier),
        seq($.type_name, "::", $._uppercase_identifier)
      ),

    type_identifier: ($) =>
      choice($.identifier, seq($.identifier, ":", $.constraints)),
