test/corpus/alias.txt
================================================================================
traitalias (import)
================================================================================
traitalias @quickcheck.Arbitrary
--------------------------------------------------------------------------------

(structure
  (trait_alias_definition
    (trait_alias_targets
      (package_identifier)
      (dot_identifier
        (dot_uppercase_identifier)))))

================================================================================
traitalias (rename)
================================================================================
traitalias A = B
traitalias C = @quickcheck.C
--------------------------------------------------------------------------------

(structure
  (trait_alias_definition
    (trait_alias_targets
      (identifier
        (uppercase_identifier))
      (type
        (apply_type
          (qualified_type_identifier
            (identifier
              (uppercase_identifier)))))))
  (semicolon
    (automatic_semicolon))
  (trait_alias_definition
    (trait_alias_targets
      (identifier
        (uppercase_identifier))
      (type
        (apply_type
          (qualified_type_identifier
            (package_identifier)
            (dot_identifier
              (dot_uppercase_identifier))))))))

================================================================================
batched traitalias
================================================================================
traitalias @quickcheck.(
  Arbitrary,
  B,
)
--------------------------------------------------------------------------------

(structure
  (trait_alias_definition
    (trait_alias_targets
      (package_identifier)
      (trait_alias_target
        (identifier
          (uppercase_identifier)))
      (trait_alias_target
        (identifier
          (uppercase_identifier))))))

================================================================================
typealias (import)
================================================================================
typealias @quickcheck.Arbitrary
typealias @quickcheck.Arbitrary[X]
typealias @quickcheck.Arbitrary[X, F]
--------------------------------------------------------------------------------

(structure
  (type_alias_definition
    (type_alias_targets
      (package_identifier)
      (dot_identifier
        (dot_uppercase_identifier))))
  (semicolon
    (automatic_semicolon))
  (type_alias_definition
    (type_alias_targets
      (package_identifier)
      (dot_identifier
        (dot_uppercase_identifier))
      (type_parameters
        (type_identifier
          (identifier
            (uppercase_identifier))))))
  (semicolon
    (automatic_semicolon))
  (type_alias_definition
    (type_alias_targets
      (package_identifier)
      (dot_identifier
        (dot_uppercase_identifier))
      (type_parameters
        (type_identifier
          (identifier
            (uppercase_identifier)))
        (type_identifier
          (identifier
            (uppercase_identifier)))))))

================================================================================
typealias (rename)
================================================================================
typealias A = B
typealias C = @quickcheck.C
typealias C[X] = @quickcheck.C[X]
typealias D[E, F] = @quickcheck.D[E, F]
--------------------------------------------------------------------------------

(structure
  (type_alias_definition
    (type_alias_targets
      (identifier
        (uppercase_identifier))
      (type
        (apply_type
          (qualified_type_identifier
            (identifier
              (uppercase_identifier)))))))
  (semicolon
    (automatic_semicolon))
  (type_alias_definition
    (type_alias_targets
      (identifier
        (uppercase_identifier))
      (type
        (apply_type
          (qualified_type_identifier
            (package_identifier)
            (dot_identifier
              (dot_uppercase_identifier)))))))
  (semicolon
    (automatic_semicolon))
  (type_alias_definition
    (type_alias_targets
      (identifier
        (uppercase_identifier))
      (type_parameters
        (type_identifier
          (identifier
            (uppercase_identifier))))
      (type
        (apply_type
          (qualified_type_identifier
            (package_identifier)
            (dot_identifier
              (dot_uppercase_identifier)))
          (type_arguments
            (type
              (apply_type
                (qualified_type_identifier
                  (identifier
                    (uppercase_identifier))))))))))
  (semicolon
    (automatic_semicolon))
  (type_alias_definition
    (type_alias_targets
      (identifier
        (uppercase_identifier))
      (type_parameters
        (type_identifier
          (identifier
            (uppercase_identifier)))
        (type_identifier
          (identifier
            (uppercase_identifier))))
      (type
        (apply_type
          (qualified_type_identifier
            (package_identifier)
            (dot_identifier
              (dot_uppercase_identifier)))
          (type_arguments
            (type
              (apply_type
                (qualified_type_identifier
                  (identifier
                    (uppercase_identifier)))))
            (type
              (apply_type
                (qualified_type_identifier
                  (identifier
                    (uppercase_identifier)))))))))))

================================================================================
batched typealias
================================================================================
typealias @quickcheck.(
  Arbitrary,
  B,
  C[X],
  D[E, F]
)
--------------------------------------------------------------------------------

(structure
  (type_alias_definition
    (type_alias_targets
      (package_identifier)
      (type_alias_target
        (identifier
          (uppercase_identifier)))
      (type_alias_target
        (identifier
          (uppercase_identifier)))
      (type_alias_target
        (identifier
          (uppercase_identifier))
        (type_parameters
          (type_identifier
            (identifier
              (uppercase_identifier)))))
      (type_alias_target
        (identifier
          (uppercase_identifier))
        (type_parameters
          (type_identifier
            (identifier
              (uppercase_identifier)))
          (type_identifier
            (identifier
              (uppercase_identifier))))))))
