test/corpus/asi.txt
================================================================================
question
================================================================================
fn f() -> Result[Unit, String] {
  let x = f
?(1, 2)
  Ok(x)
}
--------------------------------------------------------------------------------

(structure
  (function_definition
    (function_identifier
      (lowercase_identifier))
    (parameters)
    (return_type
      (type
        (apply_type
          (qualified_type_identifier
            (identifier
              (uppercase_identifier)))
          (type_arguments
            (type
              (apply_type
                (qualified_type_identifier
                  (identifier
                    (uppercase_identifier)))))
            (type
              (apply_type
                (qualified_type_identifier
                  (identifier
                    (uppercase_identifier)))))))))
    (block_expression
      (let_expression
        (pattern
          (simple_pattern
            (lowercase_identifier)))
        (apply_expression
          (lowercase_identifier)
          (question_operator)
          (arguments
            (argument
              (atomic_expression
                (literal
                  (integer_literal))))
            (argument
              (atomic_expression
                (literal
                  (integer_literal)))))))
      (semicolon
        (automatic_semicolon))
      (apply_expression
        (constructor_expression
          (uppercase_identifier))
        (arguments
          (argument
            (qualified_identifier
              (lowercase_identifier)))))
      (semicolon
        (automatic_semicolon)))))

================================================================================
comma
================================================================================
fn main {
  loop a {
    _ => {
      continue 1,
        2   ,
3
    }
  }
}
--------------------------------------------------------------------------------

(structure
  (function_definition
    (function_identifier
      (lowercase_identifier))
    (block_expression
      (loop_expression
        (qualified_identifier
          (lowercase_identifier))
        (matrix_case_clause
          (pattern
            (simple_pattern))
          (nonempty_block_expression
            (continue_expression
              (atomic_expression
                (literal
                  (integer_literal)))
              (atomic_expression
                (literal
                  (integer_literal)))
              (atomic_expression
                (literal
                  (integer_literal))))
            (semicolon
              (automatic_semicolon))))
        (semicolon
          (automatic_semicolon)))
      (semicolon
        (automatic_semicolon)))))
